syntax = "proto3";
import "google/protobuf/timestamp.proto";


option csharp_namespace = "GrpcProfileService";

message IsChangedResult{
    bool IsChagned = 1;
}

message ChangeEmailRequest{
    string loginOrEmail = 1;
    string password = 2;
    string newEmail = 3;
}

message ChangePasswordRequest{
    string loginOrEmail = 1;
    string password = 2;
    string newPassword = 3;
}

message LoginRequest{
    string loginOrEmail = 1;
    string password = 2;
}

message CreateProfileRequest{
    string email = 1;

    string password = 2;

    string login = 3;
}

message ProfileResponse{
    string id = 1;

    UserResponse user = 2;
}

message UserResponse{
    string email = 1;

    string password = 2;

    string login = 3;

    google.protobuf.Timestamp createdAt = 4;
}

message SendCodeToResetPasswordRequest
{
    string email = 1;
}
message SendCodeToResetPasswordResponse
{
    string code = 1;
}
message ResetPasswordRequest
{
    string email = 1;
    string code = 2;
    string newPassword = 3;
}
message ResetPasswordResponse
{
    bool IsReseted = 1;
}

service Profile{
    rpc CreateProfile (CreateProfileRequest) returns(ProfileResponse);
    rpc Login(LoginRequest) returns(ProfileResponse);
    rpc ChangeEmail(ChangeEmailRequest) returns(IsChangedResult);
    rpc ChangePassword(ChangePasswordRequest) returns(IsChangedResult);
    rpc SendCodeToEmailToResetPassword(SendCodeToResetPasswordRequest) returns(SendCodeToResetPasswordResponse);
    rpc ResetPassword(ResetPasswordRequest) returns(ResetPasswordResponse);
}
